# tauri-plugins

./: .gitignore  Cargo.toml  KNOWN_ISSUES.md  LICENSE-MIT  README.md  biome.json
crates/plugin-customizer/: Cargo.toml  api-iife.js
crates/plugin-customizer/permissions/autogenerated/: reference.md
crates/plugin-customizer/permissions/autogenerated/commands/: open_data_directory.toml  open_in_browser.toml  open_log_directory.toml  open_log_file.toml
crates/plugin-customizer/permissions/schemas/: schema.json
crates/plugin-customizer/src/: lib.rs
crates/plugin-customizer/src/theme/: builder.rs  linux.rs  macos.rs  windows.rs
crates/plugin-essential/: Cargo.toml
crates/plugin-essential/permissions/autogenerated/: reference.md
crates/plugin-essential/src/: cmd.rs  lib.rs
crates/plugin-localstore/: CHANGELOG.md  Cargo.toml  README.md  api-iife.js  build.rs
crates/plugin-localstore/permissions/autogenerated/: reference.md
crates/plugin-localstore/src/: adapter.rs  builder.rs  cmd.rs  errors.rs  keyv.rs  lib.rs  plugin.rs  store.rs  utils.rs
crates/plugin-localstore/src/keyv/: adapter.rs  keyv.rs  mod.rs  store.rs
crates/plugin-localstore/src/migration/: mod.rs
crates/plugin-localstore/src/sql/: builder.rs  mod.rs
crates/plugin-nativefier/: Cargo.toml  README.md  api-iife.js  build.rs
crates/plugin-nativefier/permissions/autogenerated/: reference.md
crates/plugin-nativefier/permissions/autogenerated/commands/: list_font_mono.toml  list_font_sans.toml
crates/plugin-nativefier/src/: cmd.rs  lib.rs  utils.rs
crates/plugin-nativefier/src/theme/: mod.rs
