[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
authors = ["Aris Ripandi <aris@crabbycraft.com>"]
repository = "http://github.com/thecrabbycraft/tauri-plugins"
documentation = "http://github.com/thecrabbycraft/tauri-plugins"
homepage = "https://www.crabbycraft.com"
license = "MIT OR Apache-2.0"
rust-version = "1.79"
edition = "2021"

# See Cargo workspaces documentation at https://doc.rust-lang.org/cargo/reference/workspaces.html
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.lints.rust]
unsafe_code = "allow"
missing_docs = "allow"

[workspace.dependencies]
