[package]
name = "tauri-plugin-customizer"
links = "tauri-plugin-customizer"
description = "Tauri plugin for customizing the application UI"
version = "0.0.0"
authors = ["Aris Ripandi <aris@crabbycraft.com>"]
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = true

[lints]
workspace = true

[build-dependencies]
tauri-plugin = { version = "2.0.0-rc.0", features = ["build"] }

[dependencies]
tauri = { version = "2.0.0-rc.0", features = ["devtools"] }
tauri-plugin-dialog = "2.0.0-rc.0"
tauri-plugin-shell = "2.0.0-rc.0"
font-kit = "0.14.1"
url = "2.5"
webbrowser = { version = "1.0", features = ["disable-wsl"] }

# Shared dependencies
anyhow = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25.0"
objc = "0.2.7"
rand = "0.8.5"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = { version = "0.18", features = ["v3_24"] }
webkit2gtk = { version = "=2.0.1", features = ["v2_38"] }
tintanum = "0.1"
futures-lite = "2.2"
