[package]
name = "tauri-plugin-essential"
links = "tauri-plugin-essential"
description = "Tauri essential plugin (app database, settings, KV database, and theme)"
version = "0.0.0"
authors = ["Aris Ripandi <aris@crabbycraft.com>"]
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = true

[lints]
workspace = true

[dependencies]
tauri = { version = "2.0.0-beta.23", features = ["devtools"] }
log = "^0.4"

[build-dependencies]
tauri-plugin = { version = "2.0.0-beta.18", features = ["build"] }
