[package]
name = "tauri-plugin-localstore"
links = "tauri-plugin-localstore"
description = "Tauri plugin for interfacing with internal database"
version = "0.0.0"
authors = ["Aris Ripandi <aris@crabbycraft.com>"]
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = true

[lints]
workspace = true

[build-dependencies]
tauri-plugin = { version = "2.0.0-beta.19", features = ["build"] }

[dependencies]
tauri = { version = "2.0.0-beta.24", features = ["devtools"] }
log = "^0.4"
