[package]
name = "tauri-plugin-localstore"
links = "tauri-plugin-localstore"
description = "Tauri plugin for interfacing with internal database"
version = "0.0.0"
authors = ["Aris Ripandi <aris@crabbycraft.com>"]
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = true

[lints]
workspace = true

[build-dependencies]
tauri-plugin = { version = "2.0.0-rc.0", features = ["build"] }

[dependencies]
tauri = { version = "2.0.0-rc.0", features = [] }
libsql = { version = "0.5", features = [ "parser", "serde" ] }
tokio = { version = "1.39", features = [] }

# Shared dependencies
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
